# instance-templates

./: Deltas.md  Details.md  Examples.md  Extras.md  LICENSE  OldCode.hs  Readme.md  Rewriter.hs  Test.hs  TestUse.hs  instance-templates.cabal
doc/: Details.md  Examples.md  Extras.md  OldCode.md  Overlap.md
src/Language/Haskell/: InstanceTemplates.hs
test-inputs/test1/: Test1.hs
test-outputs/test1/: Test1.hs  Test1Class0.hs
tests/lattice/: Enumerable.hs  Lattices.hs  Test.hs
tests/monads/: Classes.hs  Templates.hs  Test.hs  WithExt.hs
tests/numeric/: Classes.hs  Test.hs  WithExt.hs
tests/simple/: Classes.hs  Test.hs  TestUse.hs  WithExt.hs
